--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.0.4</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>MyUtils</groupId>
             <artifactId>MyUtils</artifactId>
             <version>1.0</version>
