--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,19 @@
             <artifactId>MyUtils</artifactId>
             <version>1.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.github.detro.ghostdriver</groupId>
             <artifactId>phantomjsdriver</artifactId>
             <version>1.0.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+
 
     </dependencies>
 
