--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
-
+image.gif
+image.pnm
+tmp/*
 *.iml
 
 ## Directory-based project format:
