--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 image.gif
 image.pnm
-tmp/*
+#tmp/*
 *.iml
 
 ## Directory-based project format:
