--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 image.gif
+phantomjsdriver.log
 image.pnm
 tmp/*
 *.iml
