--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 image.gif
-phantomjsdriver.log
+/phantomjsdriver.log
 image.pnm
 tmp/*
 *.iml
@@ -21,7 +21,7 @@ tmp/*
 # .idea/sqlDataSources.xml
 # .idea/dynamic.xml
 # .idea/uiDesigner.xml
-
+#
 # Gradle:
 # .idea/gradle.xml
 # .idea/libraries
