--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>5.1.38</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
