--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <version>3.4</version>
         </dependency>
 
+<dependency>
+	<groupId>commons-lang</groupId>
+	<artifactId>commons-lang</artifactId>
+	<version>2.6</version>
+</dependency>
+
+
         <dependency>
             <groupId>com.github.detro.ghostdriver</groupId>
             <artifactId>phantomjsdriver</artifactId>
