--- a/config.sample.properties
+++ b/config.sample.properties
@@ -3,6 +3,9 @@
 #timeout in minutes. After that the program will exit. Delete if you dont need
 exitAfterMinutes=120
 
+#if we want to use tor
+useTor=false
+
 #database stuff
 database=proxies
 databaseUser=root
