--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### JetBrains template
+config.properties
 input/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 image.gif
