--- a/config.sample.properties
+++ b/config.sample.properties
@@ -3,8 +3,8 @@
 #timeout in minutes. After that the program will exit. Delete if you dont need
 exitAfterMinutes=120
 
-#if we want to use tor
-useTor=false
+#if we want to use tor. Valid values are true or True anything else is considered false
+useTor=true
 
 #database stuff
 database=proxies
@@ -15,7 +15,7 @@ databaseHost=127.0.0.1
 
 #proxymity variables
 #how many checker threads to run
-checkerThreadsCount=200
+checkerThreadsCount=100
 #how often to recheck active proxies. In minutes
 checkerRecheckInterval=20
 #If a proxy is inactive for markDeadInterval it is marked as dead. Dead proxies are re-scanned less than active proxies.
