--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #this should be in config.properties. if this is the file config.sample.properties, please rename it and fix the values.
 
 #timeout in minutes. After that the program will exit. Delete if you dont need
-exitAfterMinutes=120
+#exitAfterMinutes=120
 
 #if we want to use tor. Valid values are true or True anything else is considered false
-useTor=true
+useTor=false
 
 #database stuff
 database=proxies
