--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ config.properties
 input/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 image.gif
-/phantomjsdriver.log
+phantomjsdriver.log
 image.pnm
 tmp/*
 *.iml
+
+target/
 
 ## Directory-based project format:
 .idea/
