--- a/config.properties
+++ b/config.properties
@@ -9,7 +9,7 @@ useTor=true
 #database stuff
 database=proxies
 databaseUser=root
-databasePassword=toor
+databasePassword=
 databasePort=3306
 databaseHost=127.0.0.1
 
