--- a/config.properties
+++ b/config.properties
@@ -4,7 +4,7 @@
 exitAfterMinutes=120
 
 #if we want to use tor. Valid values are true or True anything else is considered false
-useTor=true
+useTor=false
 
 #database stuff
 database=proxies
