Removed config.properties from repo

--- a/config.properties
+++ b/config.properties
@@ -9,7 +9,7 @@ useTor=false
 #database stuff
 database=proxies
 databaseUser=root
-databasePassword=
+databasePassword=toor
 databasePort=3306
 databaseHost=127.0.0.1
 
