--- a/config.properties
+++ b/config.properties
@@ -7,7 +7,7 @@ useTor=false
 #database stuff
 database=proxies
 databaseUser=root
-databasePassword=
+databasePassword=toor
 databasePort=3306
 databaseHost=127.0.0.1
 
