--- a/docker/config.properties
+++ b/docker/config.properties
@@ -1,5 +1,5 @@
 #timeout in minutes. After that the program will exit. Delete if you dont need
-#exitAfterMinutes=120
+exitAfterMinutes=120
 
 #if we want to use tor. Valid values are true or True anything else is considered false
 useTor=false
