Proxymity now works with new Debian version

--- a/docker/config.properties
+++ b/docker/config.properties
@@ -6,7 +6,7 @@ useTor=false
 
 #database stuff
 database=proxies
-databaseUser=root
+databaseUser=root2
 databasePassword=
 databasePort=3306
 databaseHost=127.0.0.1
