- Rever buggy change.

--- a/config.properties.sample
+++ b/config.properties.sample
@@ -23,6 +23,6 @@ markDeadInterval=60
 #how many phantomJs instances to run
 phantomJsInstances=10
 #To verify https connect to this URL. Do not include https://
-httpsCheckUrl=httpbin.org/ip
+httpsCheckUrl=example.com
 #to verify https works ok, the below text must be included in the response of GET httpsCheckUrl
-httpsVerificationString="origin\": \""
+httpsVerificationString=<title>Example Domain</title>
