- Rever buggy change.

--- a/docker/config.properties
+++ b/docker/config.properties
@@ -21,6 +21,6 @@ markDeadInterval=60
 #how many phantomJs instances to run
 phantomJsInstances=10
 #To verify https connect to this URL. Do not include https://
-httpsCheckUrl=example.com
+httpsCheckUrl=httpbin.org/ip
 #to verify https works ok, the below text must be included in the response of GET httpsCheckUrl
-httpsVerificationString=<title>Example Domain</title>
+httpsVerificationString="origin": "
